examples/test/testpolicy9191.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9191
  namespace: namespace349
spec:
  podSelector:
    matchLabels:
      key16: value48
      key11: value33
      key28: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value28
          key14: value0
      podSelector:
        matchLabels:
          key7: value24
          key45: value7
          key5: value13
